add: background for sing-in form

--- a/ChatUI/src/app/user/components/sing-in/sing-in.component.html
+++ b/ChatUI/src/app/user/components/sing-in/sing-in.component.html
@@ -1,3 +1,6 @@
-<p>
-  sing-in works!
-</p>
+<div class="back-layout">
+  <div class="top-left-row"></div>
+  <div class="top-right-row"></div>
+  <div class="bottom-left-row"></div>
+  <div class="bottom-right-row"></div>
+</div>
