--- a/ChatUI/src/app/user/components/sing-up/sing-up.component.html
+++ b/ChatUI/src/app/user/components/sing-up/sing-up.component.html
@@ -1,3 +1,37 @@
-<p>
-  sing-up works!
-</p>
+<div class="card center-card">
+  <form class="flex-form" #loginForm="ngForm" (ngSubmit)="registrate(userName.value,password.value)">
+    <label> Login
+      <input type="text" autocomplete="off" placeholder="User name" class="form-control" name="userName" #userName
+        ngModel required pattern="[a-zA-Z_]+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}">
+    </label>
+    <input type="password" autocomplete="off" placeholder="Password" class="form-control" name="password" #password
+      ngModel required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+    <small [hidden]="password.valid" class="form-text red-text">
+      Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special
+      characters, or emoji.
+    </small>
+    <input type="password" autocomplete="off" placeholder="Password" class="form-control" name="passwordRepeat"
+      #passwordRepeat ngModel required>
+    <small [hidden]="(passwordRepeat.value == password.value)">
+      Passwords do not match
+    </small>
+    <button [disabled]="!loginForm.valid" class="login-btn" type="submit">
+      <div>Sign in
+        <i class="fas fa-arrow-right"></i>
+      </div>
+    </button>
+  </form>
+</div>
+
+<div class="back-layout">
+  <div class="top-left-row">
+    <div class="brand">
+      <h1 class="brand-name">Siger
+        <i class="fas fa-feather-alt"></i>
+      </h1>
+    </div>
+  </div>
+  <div class="top-right-row"></div>
+  <div class="bottom-left-row"></div>
+  <div class="bottom-right-row"></div>
+</div>
