--- a/ChatUI/src/app/user/components/sing-up/sing-up.component.html
+++ b/ChatUI/src/app/user/components/sing-up/sing-up.component.html
@@ -26,7 +26,7 @@
     </small>
 
     <button [disabled]="!loginForm.valid" class="login-btn" type="submit">
-      <div>Sign in
+      <div>Sign up
         <i class="fas fa-arrow-right"></i>
       </div>
     </button>
