--- a/ChatUI/src/app/messages/components/message/message.component.html
+++ b/ChatUI/src/app/messages/components/message/message.component.html
@@ -7,18 +7,18 @@
         <input [hidden]="true" type="file" id="file-input">
         <label for="file-input">
           <h4>
-            <i class="fas fa-paperclip"></i>
+            <i class="fas fa-paperclip icon-color"></i>
           </h4>
         </label>
       </div>
 
-      <input type="text" class="form-control" placeholder="Enter your message" name="message" #message ngModel
-        required autocomplete="off">
+      <input type="text" class="form-control" placeholder="Enter your message" name="message" #message ngModel required
+        autocomplete="off">
 
       <div class="input-group-append">
         <button [disabled]="!loginForm.valid" class="form-control btn btn-outline-success" type="submit">
-          <div>Sign in
-            <i class="fas fa-arrow-right"></i>
+          <div>Send
+            <i class="far fa-paper-plane"></i>
           </div>
         </button>
       </div>
