--- a/ChatUI/src/app/user/components/menu/menu.component.html
+++ b/ChatUI/src/app/user/components/menu/menu.component.html
@@ -1,8 +1,8 @@
 <div class="card center-card">
   <div class="card-title">
     <ul class="nav nav-pills flex-center">
-      <button class="tab-btn" routerLink="sign-up" routerLinkActive="active-tab"> Go to sign in</button>
-      <button class="tab-btn" routerLink="sign-in" routerLinkActive="active-tab">Go to sign up</button>
+      <button class="tab-btn" routerLink="sign-up" routerLinkActive="active-tab"> Sign up</button>
+      <button class="tab-btn" routerLink="sign-in" routerLinkActive="active-tab">Sign in</button>
     </ul>
   </div>
   <div class="card-body">
