--- a/ChatUI/src/app/messages/components/message-form/message.component.html
+++ b/ChatUI/src/app/messages/components/message-form/message.component.html
@@ -1,4 +1,4 @@
-<form #messageForm="ngForm" (ngSubmit)="sendMessage(message.value)" (click)='MakeAktive()'>
+<form #messageForm="ngForm" (ngSubmit)="sendMessage(message.value)">
 
   <div class="input-group">
 
