--- a/ChatUI/src/app/messages/components/message-model/message-model.component.html
+++ b/ChatUI/src/app/messages/components/message-model/message-model.component.html
@@ -1,4 +1,4 @@
 <div>
-  <div>Text message</div>
-  <small>Date message</small>
+  <div>{{message.textMessage}}</div>
+  <small>{{message.dateTime}}</small>
 </div>
