--- a/ChatUI/src/app/contacts/components/contacts/contacts.component.html
+++ b/ChatUI/src/app/contacts/components/contacts/contacts.component.html
@@ -1,4 +1,7 @@
 <div class="contacts-container">
-  <app-contact *ngFor="let contact of contacts" [contact]="contact">
+  <app-contact 
+    *ngFor="let contact of contacts" 
+    [contact]="contact"
+    (setActive)="onSetActive($event)">
   </app-contact>
 </div>
