feat: ng lint and correct some messages bugs

--- a/ChatUI/src/app/contacts/components/contact/contact.component.html
+++ b/ChatUI/src/app/contacts/components/contact/contact.component.html
@@ -13,7 +13,7 @@
         <i class="far fa-address-card"></i>
         {{contact.userName}}
       </h5>
-      <div class="message-short-text">{{contact.lastMessage.textMessage}}</div>
+      <div class="message-short-text text-truncate">{{contact.lastMessage.textMessage}}</div>
       <div><small class="text-muted">{{contact.lastMessage.dateTime}}</small></div>
     </div>
   </div>
