--- a/ChatUI/src/app/messages/components/message-form/message.component.html
+++ b/ChatUI/src/app/messages/components/message-form/message.component.html
@@ -11,7 +11,7 @@
       </label>
     </div>
 
-    <input type="text" class="form-control" placeholder="Enter your message" name="message" #message ngModel required
+    <input type="text" id="text-area" class="form-control" placeholder="Enter your message" name="message" #message ngModel required
       autocomplete="off">
 
     <div class="input-group-append">
