--- a/ChatUI/src/app/messages/components/messages/messages.component.html
+++ b/ChatUI/src/app/messages/components/messages/messages.component.html
@@ -1,4 +1,2 @@
-<app-message-model 
-    *ngFor="let message of messages" 
-    [message]="message">
+<app-message-model *ngFor="let message of messages" [message]="message">
 </app-message-model>
