--- a/ChatUI/src/app/main-view/main-view/message-view.component.html
+++ b/ChatUI/src/app/main-view/main-view/message-view.component.html
@@ -1,3 +1,3 @@
 <app-contacts class="contacts-area"></app-contacts>
-<app-messages class="messages-container-area container-big"></app-messages>
-<app-message class="message-area"></app-message>
+<app-messages class="messages-container-area container"></app-messages>
+<app-message class="sending-form-area"></app-message>
